--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body>
+  <body style="background-color: rgb(71 85 105 / var(--tw-bg-opacity, 1))">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
